# Agnes-Desktop

./: .gitignore  CLAUDE.md  LICENSE  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  构建手册.md
.claude/: settings.local.json
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/chat/: ChatView.tsx
src/components/image/: ImageView.tsx
src/components/layout/: MainLayout.tsx
src/components/settings/: SettingsView.tsx
src/components/ui/: button.tsx
src/components/video/: VideoView.tsx
src/lib/: error-boundary.tsx  i18n.ts
src/locales/: en.json  zh.json
src/services/: api.ts  chatService.ts  downloadService.ts  imageService.ts  videoService.ts
src/stores/: chatStore.ts  imageStore.ts  settingsStore.ts  videoStore.ts
src/types/: index.ts
